# generic_cg

./: CMakeLists.txt  README.md
include/: cg.h
notebooks/: example.ipynb  example.py
src/: CMakeLists.txt  cg.cpp  cg_python_binding.cpp
test/: CMakeLists.txt  main.cpp
